# Game

./: CMakeLists.txt
assets/: Sprite1.aseprite  Sprite2.aseprite  Walk.aseprite  Walk.json  arial_regular_10.xml  arial_regular_20.xml  system_font_regular_20.xml
include/: GameConfig.h.in  assets.h  common.h  fonts.h  render.h  tiles.h
libs/Box2D/: CMakeLists.txt
src/: main.cpp
